Allow JPEG input in WASM demo

--- a/wasm/demo/index.html
+++ b/wasm/demo/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <h1>MozJPEG WASM Demo</h1>
-  <p>Select an image (PNG, BMP, etc.), choose a quality, and compress it to JPEG in your browser.</p>
-  <input type="file" id="input" accept="image/*" />
+  <p>Select a JPEG image, choose a quality, and recompress it in your browser.</p>
+  <input type="file" id="input" accept="image/jpeg" />
   <label>
     Quality:
     <input type="range" id="quality" min="1" max="100" value="75" />
