Show compression rate after WASM demo

--- a/wasm/demo/index.html
+++ b/wasm/demo/index.html
@@ -19,6 +19,7 @@
   </label>
   <button id="compress">Compress</button>
   <p><a id="download" style="display:none"></a></p>
+  <p id="rate" style="display:none"></p>
   <img id="preview" alt="Compressed preview" />
 
   <script src="mozjpeg.js"></script>
